<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="253dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <com.example.examen2p.Screen1.CaptureBitmap
            android:id="@+id/txtS1Firma"
            android:layout_width="match_parent"
            android:layout_height="215dp" />

        <Button
            android:id="@+id/btnS1BorrarFirma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ver"
            android:text="Limpiar firma" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/firma_digital"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtS1Nombre"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        tools:ignore="LabelFor,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtS1Telefono"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="phone"
        android:textColor="@color/white"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="306dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/latitud"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtS1Latitud"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="number"
                android:textColor="@color/white"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/longitud"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtS1Longitud"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="number"
                android:textColor="@color/white"
                android:autofillHints=""
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnS2GPS"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/ver"
                android:text="@string/gps" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnS1Guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/guardar"
        android:text="@string/guardar_contacto" />

    <Button
        android:id="@+id/btnS1Ver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ver"
        android:text="@string/contactos_guardados" />

</LinearLayout>